--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,9 @@
 /**app.wxss**/
+page{
+   font-family: PingFangSC-Thin; 
+   font-size:16px;
+  /* overflow: hidden; */
+}
 .container {
   height: 100%;
 
