--- a/components/like/like.wxml
+++ b/components/like/like.wxml
@@ -1,4 +1,4 @@
-<view class="like-container" bind:tap="onLike">
+<view class="container" bind:tap="onLike">
   <image src="{{like?yes_url:no_url}}" />
    <text>{{count}}</text> 
 </view>
