--- a/components/like/like.wxss
+++ b/components/like/like.wxss
@@ -1,20 +1,23 @@
+/* components/like/like-cmp.wxss */
 
-.like-container {
+.container{
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
+  /* 必须指定宽度，否则会出现移动 */
+  /* width:120rpx;  */
   padding:10rpx;
-
 }
-.like-container text {
-  font-size: 24rpx;
+
+.container text{
+  font-size:24rpx;
   color: #bbbbbb;
-  line-height: 24rpx;
-  position: relative;
-  bottom: 10rpx;
-  left: 6rpx;
-
+  line-height:24rpx;
+  position:relative;
+  bottom:10rpx;
+  left:6rpx; 
 }
-.like-container image {
-  width: 32rpx;
-  height: 28rpx;
+
+.container image{
+  width:32rpx;
+  height:28rpx;
 }
