add epsoide compoment

--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,6 +1,7 @@
+<view class="header">
+  <v-epsoide class="epsoide" index="{{classic.index}}"></v-epsoide>
+  <v-like class="like" bind:like="onLike" like="{{classic.like_status}}" count="{{classic.fav_nums}}" />
+</view>
 
-  <v-like  bind:like="onLike" like="{{classic.like_status}}" count="{{classic.fav_nums}}" />
 
-
-  <v-movie img="{{classic.image}}" content="{{classic.content}}" />
-
+<v-movie img="{{classic.image}}" content="{{classic.content}}" />
