--- a/pages/classic/classic.wxss
+++ b/pages/classic/classic.wxss
@@ -1,31 +1,21 @@
 /* pages/classic/classic.wxss */
 
-.container {
-  height: 400px;
+.header {
   display: flex;
-  justify-items: center;
-  justify-content:center;
   flex-direction: row;
-  align-items: baseline;
-
-}
-.chunk {
-  width: 100rpx;
   height: 100rpx;
-  background-color: pink;
-  display: flex;
-}
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid #f5f5f5;
+  border-bottom: 1px solid #f5f5f5;
 
-.red {
-  background: red;
-  font-size: 12px;
+
 }
-.blue {
-  background: blue;
+.epsoide {
+  margin-left: 20rpx;
+  margin-top: 4rpx;
 }
-.yellow {
-  background: yellow;
-}
-.pink {
-  background: pink;
+.like {
+  margin-top: 6rpx;
+
 }
