--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,3 +1,5 @@
+
+<view class="container">
 <view class="header">
   <v-epsoide class="epsoide" index="{{classic.index}}"></v-epsoide>
   <v-like class="like" bind:like="onLike" like="{{classic.like_status}}" count="{{classic.fav_nums}}" />
@@ -5,3 +7,6 @@
 
 
 <v-movie img="{{classic.image}}" content="{{classic.content}}" />
+<v-navi class="navi" title="{{classic.title}}" first="{{first}}" latest="{{latest}}" />
+
+</view>
