--- a/pages/classic/classic.wxss
+++ b/pages/classic/classic.wxss
@@ -1,21 +1,31 @@
 /* pages/classic/classic.wxss */
+.container{
+  width:100%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .header {
+    width: 100%;
+  height: 100rpx;
   display: flex;
   flex-direction: row;
-  height: 100rpx;
   align-items: center;
   justify-content: space-between;
   border-top: 1px solid #f5f5f5;
   border-bottom: 1px solid #f5f5f5;
-
-
 }
 .epsoide {
   margin-left: 20rpx;
-  margin-top: 4rpx;
+  margin-top: 14rpx;
 }
-.like {
-  margin-top: 6rpx;
+.like{
+  margin-right: 30rpx;
+  margin-top:12rpx;
+}
 
+.navi {
+  position:absolute;
+  bottom: 40rpx;
 }
