--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,12 +1,11 @@
-
 <view class="container">
-<view class="header">
-  <v-epsoide class="epsoide" index="{{classic.index}}"></v-epsoide>
-  <v-like class="like" bind:like="onLike" like="{{classic.like_status}}" count="{{classic.fav_nums}}" />
-</view>
+  <view class="header">
+    <v-epsoide class="epsoide" index="{{classic.index}}"></v-epsoide>
+    <v-like class="like" bind:like="onLike" like="{{classic.like_status}}" count="{{classic.fav_nums}}" />
+  </view>
 
 
-<v-movie img="{{classic.image}}" content="{{classic.content}}" />
-<v-navi class="navi" title="{{classic.title}}" first="{{first}}" latest="{{latest}}" />
+  <v-movie img="{{classic.image}}" content="{{classic.content}}" />
+  <v-navi class="navi" bind:left="onLeft" bind:right="onRight" title="{{classic.title}}" first="{{first}}" latest="{{latest}}" />
 
 </view>
