--- a/components/classic/music/music.wxml
+++ b/components/classic/music/music.wxml
@@ -1,7 +1,8 @@
 <!--components/classic/music/music.wxml-->
-<view>
-  <image src="{{img}}"></image>
-  <image src="{{playSrc}}"></image>
-  <image src="images/music@tag.png"></image>
-  <text>{{content}}</text>
+<view class="classic-container">
+  <image src="{{img}}" class="classic-img {{playing?'rotation':''}}" />
+  <image class="player-img" bind:tap = "onPlay"
+   src="{{!playing?playSrc:pauseSrc}}" />
+   <image class='tag' src="images/music@tag.png" /> 
+  <text class="content">{{content}}</text>
 </view>
