--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -10,7 +10,7 @@
    <view class="sub-container">
     <image class="head-img" src="/images/book/quality.png" />
     <view class="books-container">
-      <block wx:for="{{books}}">
+      <block wx:for="{{books}}" wx:key="{{id}}">
         <v-book book="{{item}}" class="book" />
       </block>
     </view>
