实现历史搜索

--- a/components/search/search.wxml
+++ b/components/search/search.wxml
@@ -15,7 +15,7 @@
         <text>历史搜索</text>
       </view>
       <view class="tags">
-        <tag-cmp bind:tapping="onConfirm" wx:for="{{historyKeys}}" text="{{item}}" />
+        <v-tag bind:tapping="onConfirm" wx:for="{{historyWords}}" text="{{item}}" />
       </view>
     </view>
     <view class="history hot-search">
@@ -24,16 +24,16 @@
         <text>热门搜索</text>
       </view>
         <view class="tags">
-          <tag-cmp bind:tapping="onConfirm" wx:for="{{hotKeys}}" text="{{item}}" />
+          <v-tag bind:tapping="onConfirm" wx:for="{{hotKeys}}" text="{{item}}" />
         </view>
     </view>
   </view>
   <view class="books-container" wx:if="{{finished}}">
     <block wx:for="{{dataArray}}" wx:key="{{item.id}}">
-      <book-cmp show-like="{{false}}" book="{{item}}" class="book" />
+      <v-book show-like="{{false}}" book="{{item}}" class="book" />
     </block>
   </view>
-  <loading-cmp class="loading" wx:if="{{loading}}" />
-  <loading-cmp class="loading-center" wx:if="{{loadingCenter}}" />
+  <v-loading class="loading" wx:if="{{loading}}" />
+  <v-loading class="loading-center" wx:if="{{loadingCenter}}" />
   <text wx:if="{{empty}}" class="empty-tip">没有搜索到书籍</text>
 </view>
