--- a/components/search/search.wxml
+++ b/components/search/search.wxml
@@ -1,21 +1,28 @@
 <!--components/search/search.wxml-->
 <view class="container">
   <view class="header">
+
+    <!-- 搜索框 -->
     <view class="search-container">
       <image class="icon" src="images/search.png" />
-      <input placeholder-class='in-bar' placeholder='书籍名' class='bar' bind:confirm="onConfirm" value="{{q}}" auto-focus="true" />
-      <image bind:tap="onDelete" class="cancel-img" src="images/cancel.png" />
+      <input placeholder-class='in-bar' placeholder='书籍名' class='bar' bind:confirm="onConfirm"  value="{{q}}" />
+      <image bindtap="onDelete"  class="cancel-img" src="images/cancel.png" />
     </view>
+    
+
     <view class='cancel' bind:tap="onCancel">取消</view>
   </view>
-  <view wx:if="{{!finished}}">
+
+
+
+  <view wx:if="{{!searching}}">
     <view class="history">
       <view class="title">
         <view class="chunk"></view>
         <text>历史搜索</text>
       </view>
       <view class="tags">
-        <v-tag bind:tapping="onConfirm" wx:for="{{historyWords}}" text="{{item}}" />
+        <v-tag bind:tapping="onConfirm" wx:key="*this" wx:for="{{historyWords}}" text="{{item}}" />
       </view>
     </view>
     <view class="history hot-search">
@@ -24,16 +31,16 @@
         <text>热门搜索</text>
       </view>
       <view class="tags">
-        <v-tag bind:tapping="onConfirm" wx:for="{{hotWords}}" text="{{item}}" />
+        <v-tag bind:tapping="onConfirm" wx:for="{{hotWords}}" wx:key="*this" text="{{item}}" />
       </view>
     </view>
   </view>
-  <view class="books-container" wx:if="{{finished}}">
+
+  <!-- 搜索结果展示 -->
+  <view class="books-container" wx:if="{{searching}}">
     <block wx:for="{{dataArray}}" wx:key="{{item.id}}">
       <v-book show-like="{{false}}" book="{{item}}" class="book" />
     </block>
   </view>
-  <v-loading class="loading" wx:if="{{loading}}" />
-  <v-loading class="loading-center" wx:if="{{loadingCenter}}" />
-  <text wx:if="{{empty}}" class="empty-tip">没有搜索到书籍</text>
+
 </view>
