--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,2 +1,22 @@
-<!--pages/my/my.wxml-->
-<text>pages/my/my.wxml</text>
+<view class="container">
+  <image src="/images/my/my@bg.png" class="bg"></image>
+  <v-button wx:if="{{!hasUserInfo}}" open-type="getUserInfo" class="avatar-position" bind:getuserinfo="onGetUserInfo">
+     <image slot="img" class="avatar" src="/images/my/my.png" /> 
+  </v-button>
+  <view class="avatar-container avatar-position">
+    <image src="{{userInfo.avatarUrl}}" wx:if="{{hasUserInfo}}" class="avatar" />
+    <open-data wx:if="{{hasUserInfo}}" type="userNickName"></open-data>
+  </view>
+  <view class="about-container">
+    <view bind:tap="onJumpToAbout" class="about-us">
+      <image src="/images/my/about.png" />
+      <text class="description">关于</text>
+    </view>
+    <view class="about-us">
+      <text class="book-num">{{myBooksCount}}</text>
+      <text class="description">喜欢的书</text>
+    </view>
+  </view>
+
+</view>
+
