--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,12 +1,14 @@
 <view class="container">
   <image src="/images/my/my@bg.png" class="bg"></image>
-  <v-button wx:if="{{!hasUserInfo}}" open-type="getUserInfo" class="avatar-position" bind:getuserinfo="onGetUserInfo">
+  <v-button wx:if="{{!authorized}}" open-type="getUserInfo" class="avatar-position" bind:getuserinfo="onGetUserInfo">
      <image slot="img" class="avatar" src="/images/my/my.png" /> 
   </v-button>
-  <view class="avatar-container avatar-position">
-    <image src="{{userInfo.avatarUrl}}" wx:if="{{hasUserInfo}}" class="avatar" />
-    <open-data wx:if="{{hasUserInfo}}" type="userNickName"></open-data>
+
+  <view class="avatar-container avatar-position" wx:if="{{authorized}}">
+    <image src="{{userInfo.avatarUrl}}"  class="avatar" />
+    <text>{{userInfo.nickName}}</text>
   </view>
+
   <view class="about-container">
     <view bind:tap="onJumpToAbout" class="about-us">
       <image src="/images/my/about.png" />
@@ -20,3 +22,5 @@
 
 </view>
 
+<!-- <button wx:if="{{canIUse}}" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo">授权登录</button>
+<view wx:else>请升级微信版本</view> -->
