--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -20,6 +20,15 @@
     </view>
   </view>
 
+    <view class="like-container">
+    <image class=".headline" src="/images/my/like.png" />
+    <view class="preview-container">
+      <block wx:for="{{classics}}" wx:key="*this">
+        <v-preview bind:tap="onPreviewTap" class="preview" classic="{{item}}" />
+      </block>
+    </view>
+  </view>
+
 </view>
 
 <!-- <button wx:if="{{canIUse}}" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo">授权登录</button>
