自定义分享按钮

--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -63,9 +63,9 @@
     </view>
     <view class="like-container">
       <v-like bind:like="onLike" class="like" like="{{likeStatus}}" count="{{likeCount}}" />
-      <img-btn-cmp class="share-btn" open-type="share">
+      <v-button class="share-btn" open-type="share">
         <image class="share" slot="img" src="/images/icon/share.png" />
-      </img-btn-cmp>
+      </v-button>
     </view>
   </view>
   <!-- 输入短评end -->
