--- a/pages/classic/classic.wxss
+++ b/pages/classic/classic.wxss
@@ -1,4 +1,15 @@
-/* pages/classic/classic.wxss */
+
+.header{
+  width:100%;
+  display: flex;
+  flex-direction: row;
+  height:50px;
+  align-items: center;
+  justify-content: space-between;
+  border-top :1px solid #f5f5f5;
+  border-bottom: 1px solid #f5f5f5;
+}
+
 .container{
   width:100%;
   display:flex;
@@ -6,26 +17,36 @@
   align-items: center;
 }
 
-.header {
-    width: 100%;
-  height: 100rpx;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  border-top: 1px solid #f5f5f5;
-  border-bottom: 1px solid #f5f5f5;
-}
-.episode {
-  margin-left: 20rpx;
-  margin-top: 14rpx;
-}
 .like{
   margin-right: 30rpx;
   margin-top:12rpx;
 }
 
-.navi {
-  position:absolute;
-  bottom: 40rpx;
+.like-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-right:30rpx;
+}
+
+.share-btn{
+  margin-top:28rpx;
+  margin-left:10rpx;
+}
+
+.share{
+  /* padding:10rpx; */
+  width:40rpx;
+  height:40rpx;
+}
+
+.navi{
+   position: absolute;  
+   bottom: 40rpx; 
+}
+
+.epsoide{
+   margin-left:10px; 
+   margin-top:7px;
 }
